third_party/blink/web_tests/external/wpt/pointerevents/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS Partial interface Element: original interface defined
FAIL Partial interface mixin GlobalEventHandlers: original interface mixin defined assert_true: Original interface mixin should be defined expected true got false
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS PointerEvent interface: existence and properties of interface object
PASS PointerEvent interface object length
PASS PointerEvent interface object name
PASS PointerEvent interface: existence and properties of interface prototype object
PASS PointerEvent interface: existence and properties of interface prototype object's "constructor" property
PASS PointerEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS PointerEvent interface: attribute pointerId
PASS PointerEvent interface: attribute width
PASS PointerEvent interface: attribute height
PASS PointerEvent interface: attribute pressure
PASS PointerEvent interface: attribute tangentialPressure
PASS PointerEvent interface: attribute tiltX
PASS PointerEvent interface: attribute tiltY
PASS PointerEvent interface: attribute twist
PASS PointerEvent interface: attribute pointerType
PASS PointerEvent interface: attribute isPrimary
PASS Element interface: operation setPointerCapture(long)
PASS Element interface: operation releasePointerCapture(long)
PASS Element interface: operation hasPointerCapture(long)
Harness: the test ran to completion.

